Tue Mar 10 18:47:54 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/GIOP_Message_Base.cpp:
          Fixed unicode compile error

Tue Mar 10 14:18:19 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tao/GIOP_Message_Base.cpp:
          Optimized logging when ZIOP is not enabled.

        * tao/ZIOP/ZIOP.cpp:
        * tao/ZIOP/ZIOP_Stub.cpp:
          Implemented CompressorIdLevelList policy. On the client
          ZIOP checks which compressor should be used.
          Bug 3619 is added since a ZIOP server has no idea of the
          client CompressorIdLevelList policy at this moment. A ZIOP
          client should always implement at least one ZIOP server
          CompressorIdLevelList policy.

Tue Mar 10 10:20:54 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Codeset/Codeset_Manager_i.cpp:
          Retrieve the locale as string and add that to the
          debug messages.

Tue Mar 10 09:11:54 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tao/ZIOP/ZIOP.cpp:
        * tao/ZIOP/ZIOP.h:
        * utils/catior/catior.cpp:
          Moved ziop_compressor_name to Ziop loader class.
          Made this function static.

Tue Mar 10 08:46:08 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tao/GIOP_Message_Base.cpp:
          Resolved compiler warning.

Tue Mar 10 08:22:08 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tao/GIOP_Message_Base.cpp:
        * tao/GIOP_Message_Base.h:
        * tao/ZIOP/ZIOP.cpp:
        * tao/ZIOP/ZIOP.h:
        * utils/catior/catior.cpp:
          Resolved bugzilla 3611. ZIOP logging according to
          TAO standard. More log info regarding compression
          details.

Tue Mar 10 07:05:08 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Advanced/ch_12/client.cpp
        * examples/Advanced/ch_12/server.cpp
        * examples/Advanced/ch_18/Advanced_ch_18.mpc
        * examples/Advanced/ch_18/client.cpp
        * examples/Advanced/ch_18/server.cpp